code/python/ProcuretoPayAPISCIM/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay API: SCIM client library for Python

[![PyPi](https://img.shields.io/pypi/v/fds.sdk.ProcuretoPayAPISCIM)](https://pypi.org/project/fds.sdk.ProcuretoPayAPISCIM/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet's SCIM API implementation.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- Package version: 0.21.3
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.ProcuretoPayAPISCIM
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.ProcuretoPayAPISCIM
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.ProcuretoPayAPISCIM
from fds.sdk.ProcuretoPayAPISCIM.api import file_manager_audit_api
from fds.sdk.ProcuretoPayAPISCIM.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.ProcuretoPayAPISCIM.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = file_manager_audit_api.FileManagerAuditApi(api_client)

    try:
        # Get File Manager audit data.
        # example, this endpoint has no required or optional parameters
        api_response = api_instance.file_manager_audit_get()
        pprint(api_response)
    except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
        print("Exception when calling FileManagerAuditApi->file_manager_audit_get: %s\n" % e)

    # Get response, http status code and response headers
    # try:
    #     # Get File Manager audit data.
    #     # example, this endpoint has no required or optional parameters
    #     api_response, http_status_code, response_headers = api_instance.file_manager_audit_get_with_http_info()
    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
    #     print("Exception when calling FileManagerAuditApi->file_manager_audit_get: %s\n" % e)

    # Get response asynchronous
    # try:
    #     # Get File Manager audit data.
    #     # example, this endpoint has no required or optional parameters
    #     async_result = api_instance.file_manager_audit_get_async()
    #     api_response = async_result.get()
    #     pprint(api_response)
    # except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
    #     print("Exception when calling FileManagerAuditApi->file_manager_audit_get: %s\n" % e)

    # Get response, http status code and response headers asynchronous
    # try:
    #     # Get File Manager audit data.
    #     # example, this endpoint has no required or optional parameters
    #     async_result = api_instance.file_manager_audit_get_with_http_info_async()
    #     api_response, http_status_code, response_headers = async_result.get()
    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
    #     print("Exception when calling FileManagerAuditApi->file_manager_audit_get: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG` 
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.ProcuretoPayAPISCIM

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(...)
configuration.debug = True
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/scim/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FileManagerAuditApi* | [**file_manager_audit_get**](docs/FileManagerAuditApi.md#file_manager_audit_get) | **GET** /FileManagerAudit | Get File Manager audit data.
*GroupsApi* | [**group_id_get**](docs/GroupsApi.md#group_id_get) | **GET** /Group/{id} | Get a group.
*GroupsApi* | [**group_id_patch**](docs/GroupsApi.md#group_id_patch) | **PATCH** /Group/{id} | Patch a group (add, replace, or remove attributes of a group.)
*GroupsApi* | [**group_id_put**](docs/GroupsApi.md#group_id_put) | **PUT** /Group/{id} | Replace a group.
*GroupsApi* | [**groups_get**](docs/GroupsApi.md#groups_get) | **GET** /Groups | Get a list of groups.
*LocationsApi* | [**locations_get**](docs/LocationsApi.md#locations_get) | **GET** /Locations | Get a list of locations.
*LocationsApi* | [**locations_id_get**](docs/LocationsApi.md#locations_id_get) | **GET** /Locations/{id} | Get a location.
*LocationsApi* | [**locations_id_patch**](docs/LocationsApi.md#locations_id_patch) | **PATCH** /Locations/{id} | Patch a location (add, replace, or remove attributes of a location.)
*LocationsApi* | [**locations_id_put**](docs/LocationsApi.md#locations_id_put) | **PUT** /Locations/{id} | Replace a location.
*ProductsApi* | [**products_get**](docs/ProductsApi.md#products_get) | **GET** /Products | Get a list of products.
*ProductsApi* | [**products_id_get**](docs/ProductsApi.md#products_id_get) | **GET** /Products/{id} | Get a product.
*SchemasApi* | [**schemas_get**](docs/SchemasApi.md#schemas_get) | **GET** /Schemas | Get a list of schemas.
*SchemasApi* | [**schemas_id_get**](docs/SchemasApi.md#schemas_id_get) | **GET** /Schemas/{id} | Get a schema.
*ServerConfigurationApi* | [**service_provider_config_get**](docs/ServerConfigurationApi.md#service_provider_config_get) | **GET** /ServiceProviderConfig | Get server configuration.
*UsersApi* | [**users_get**](docs/UsersApi.md#users_get) | **GET** /Users | Get a list of users.
*UsersApi* | [**users_id_delete**](docs/UsersApi.md#users_id_delete) | **DELETE** /Users/{id} | Delete a user
*UsersApi* | [**users_id_get**](docs/UsersApi.md#users_id_get) | **GET** /Users/{id} | Get a user.
*UsersApi* | [**users_id_patch**](docs/UsersApi.md#users_id_patch) | **PATCH** /Users/{id} | Patch a user (add, replace, or remove attributes of a user.)
*UsersApi* | [**users_id_put**](docs/UsersApi.md#users_id_put) | **PUT** /Users/{id} | Replace a user.
*UsersApi* | [**users_post**](docs/UsersApi.md#users_post) | **POST** /Users | Create a user.
*VermilionGroupsApi* | [**vermilion_groups_get**](docs/VermilionGroupsApi.md#vermilion_groups_get) | **GET** /VermilionGroups | Get a list of Vermilion groups.
*VermilionGroupsApi* | [**vermilion_groups_id_get**](docs/VermilionGroupsApi.md#vermilion_groups_id_get) | **GET** /VermilionGroups/{id} | Get a Vermilion group.
*VermilionGroupsApi* | [**vermilion_groups_id_patch**](docs/VermilionGroupsApi.md#vermilion_groups_id_patch) | **PATCH** /VermilionGroups/{id} | Patch a Vermilion group (add, replace, or remove attributes of a Vermilion group.)
*VermilionGroupsApi* | [**vermilion_groups_id_put**](docs/VermilionGroupsApi.md#vermilion_groups_id_put) | **PUT** /VermilionGroups/{id} | Replace a Vermilion group.
*VermilionUsersApi* | [**vermilion_users_get**](docs/VermilionUsersApi.md#vermilion_users_get) | **GET** /VermilionUsers | Get a list of Vermilion users.
*VermilionUsersApi* | [**vermilion_users_id_delete**](docs/VermilionUsersApi.md#vermilion_users_id_delete) | **DELETE** /VermilionUsers/{id} | Delete a Vermilion user.
*VermilionUsersApi* | [**vermilion_users_id_get**](docs/VermilionUsersApi.md#vermilion_users_id_get) | **GET** /VermilionUsers/{id} | Get a Vermilion user.
*VermilionUsersApi* | [**vermilion_users_id_patch**](docs/VermilionUsersApi.md#vermilion_users_id_patch) | **PATCH** /VermilionUsers/{id} | Patch a Vermilion user (add, replace, or remove attributes of a Vermilion user.)
*VermilionUsersApi* | [**vermilion_users_id_put**](docs/VermilionUsersApi.md#vermilion_users_id_put) | **PUT** /VermilionUsers/{id} | Replace a Vermilion user.
*VermilionUsersApi* | [**vermilion_users_post**](docs/VermilionUsersApi.md#vermilion_users_post) | **POST** /VermilionUsers | Create a Vermilion user.


## Documentation For Models

 - [Error](docs/Error.md)
 - [FileManagerAudit](docs/FileManagerAudit.md)
 - [GroupResource](docs/GroupResource.md)
 - [GroupResourceList](docs/GroupResourceList.md)
 - [GroupResourceMembers](docs/GroupResourceMembers.md)
 - [GroupResourceMeta](docs/GroupResourceMeta.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group.md)
 - [LocationResource](docs/LocationResource.md)
 - [LocationResourceList](docs/LocationResourceList.md)
 - [LocationResourceMeta](docs/LocationResourceMeta.md)
 - [LocationResourceReference](docs/LocationResourceReference.md)
 - [Patch](docs/Patch.md)
 - [PatchOperations](docs/PatchOperations.md)
 - [PendingProductOrder](docs/PendingProductOrder.md)
 - [ProductResource](docs/ProductResource.md)
 - [ProductResourceList](docs/ProductResourceList.md)
 - [ProductResourceMeta](docs/ProductResourceMeta.md)
 - [ProductResourceReference](docs/ProductResourceReference.md)
 - [Schema](docs/Schema.md)
 - [SchemaAttributes](docs/SchemaAttributes.md)
 - [SchemaList](docs/SchemaList.md)
 - [SchemaSubAttributes](docs/SchemaSubAttributes.md)
 - [ServiceProviderConfig](docs/ServiceProviderConfig.md)
 - [ServiceProviderConfigAuthenticationSchemes](docs/ServiceProviderConfigAuthenticationSchemes.md)
 - [ServiceProviderConfigBulk](docs/ServiceProviderConfigBulk.md)
 - [ServiceProviderConfigChangePassword](docs/ServiceProviderConfigChangePassword.md)
 - [ServiceProviderConfigEtag](docs/ServiceProviderConfigEtag.md)
 - [ServiceProviderConfigFilter](docs/ServiceProviderConfigFilter.md)
 - [ServiceProviderConfigPatch](docs/ServiceProviderConfigPatch.md)
 - [ServiceProviderConfigSort](docs/ServiceProviderConfigSort.md)
 - [UserResource](docs/UserResource.md)
 - [UserResourceGroups](docs/UserResourceGroups.md)
 - [UserResourceList](docs/UserResourceList.md)
 - [UserResourceMeta](docs/UserResourceMeta.md)
 - [UserResourceName](docs/UserResourceName.md)
 - [UserResourcePhoneNumbers](docs/UserResourcePhoneNumbers.md)
 - [UserResourceUrnScimSchemasExtensionCoreFactset10](docs/UserResourceUrnScimSchemasExtensionCoreFactset10.md)
 - [VermilionGroupResource](docs/VermilionGroupResource.md)
 - [VermilionGroupResourceList](docs/VermilionGroupResourceList.md)
 - [VermilionGroupResourceMembers](docs/VermilionGroupResourceMembers.md)
 - [VermilionGroupResourceMeta](docs/VermilionGroupResourceMeta.md)
 - [VermilionUserResource](docs/VermilionUserResource.md)
 - [VermilionUserResourceEmails](docs/VermilionUserResourceEmails.md)
 - [VermilionUserResourceEntitlements](docs/VermilionUserResourceEntitlements.md)
 - [VermilionUserResourceGroups](docs/VermilionUserResourceGroups.md)
 - [VermilionUserResourceList](docs/VermilionUserResourceList.md)
 - [VermilionUserResourceMeta](docs/VermilionUserResourceMeta.md)
 - [VermilionUserResourceName](docs/VermilionUserResourceName.md)
 - [VermilionUserResourcePhoneNumbers](docs/VermilionUserResourcePhoneNumbers.md)
 - [VermilionUserResourcePhotos](docs/VermilionUserResourcePhotos.md)
 - [VermilionUserResourceRoles](docs/VermilionUserResourceRoles.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.ProcuretoPayAPISCIM.apis and fds.sdk.ProcuretoPayAPISCIM.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.ProcuretoPayAPISCIM.api.default_api import DefaultApi`
- `from fds.sdk.ProcuretoPayAPISCIM.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.ProcuretoPayAPISCIM
from fds.sdk.ProcuretoPayAPISCIM.apis import *
from fds.sdk.ProcuretoPayAPISCIM.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

