code/python/ProcuretoPayAPISCIM/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay API: SCIM client library for Python

[![API Version](https://img.shields.io/badge/api-v2.7.0-blue)](https://developer.factset.com/api-catalog/procure-to-pay-api-scim)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.ProcuretoPayAPISCIM/0.25.0)](https://pypi.org/project/fds.sdk.ProcuretoPayAPISCIM/v/0.25.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet's SCIM API implementation.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.7.0
- SDK version: 0.25.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.ProcuretoPayAPISCIM==0.25.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.ProcuretoPayAPISCIM==0.25.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.ProcuretoPayAPISCIM
from fds.sdk.ProcuretoPayAPISCIM.api import federations_api
from fds.sdk.ProcuretoPayAPISCIM.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.ProcuretoPayAPISCIM.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = federations_api.FederationsApi(api_client)
    id = "id_example" # str | ID of resource.
    attributes = [
        "attributes_example",
    ] # [str] | Attribute whitelist filter string. A comma-separated list of resource attribute names to be returned in the response, overriding the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *excludedAttributes* or *additionalAttributes* parameters. (optional)
    excluded_attributes = [
        "excludedAttributes_example",
    ] # [str] | Attribute blacklist filter string. A comma-separated list of resource attribute names to be excluded in the response, overriding the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *attributes* or *additionalAttributes* parameters. (optional)
    additional_attributes = [
        "additionalAttributes_example",
    ] # [str] | Non-standard attribute filter string. A comma-separated list of resource attribute names to be included in the response, complementing the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *attributes* or *excludedAttributes* parameters. (optional)

    try:
        # Get a federation.
        # example passing only required values which don't have defaults set
        # and optional values
        api_response = api_instance.get_federation(id, attributes=attributes, excluded_attributes=excluded_attributes, additional_attributes=additional_attributes)

        pprint(api_response)
    except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
        print("Exception when calling FederationsApi->get_federation: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get a federation.
    #     api_response, http_status_code, response_headers = api_instance.get_federation_with_http_info(id, attributes=attributes, excluded_attributes=excluded_attributes, additional_attributes=additional_attributes)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
    #     print("Exception when calling FederationsApi->get_federation: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get a federation.
    #     async_result = api_instance.get_federation_async(id, attributes=attributes, excluded_attributes=excluded_attributes, additional_attributes=additional_attributes)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
    #     print("Exception when calling FederationsApi->get_federation: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get a federation.
    #     async_result = api_instance.get_federation_with_http_info_async(id, attributes=attributes, excluded_attributes=excluded_attributes, additional_attributes=additional_attributes)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.ProcuretoPayAPISCIM.ApiException as e:
    #     print("Exception when calling FederationsApi->get_federation: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.ProcuretoPayAPISCIM

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.ProcuretoPayAPISCIM

configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.ProcuretoPayAPISCIM

configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.ProcuretoPayAPISCIM

configuration = fds.sdk.ProcuretoPayAPISCIM.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/scim/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FederationsApi* | [**get_federation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationsApi.md#get_federation) | **GET** /Federations/{id} | Get a federation.
*FederationsApi* | [**get_federations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationsApi.md#get_federations) | **GET** /Federations | Get a list of federations.
*FederationsApi* | [**modify_federation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationsApi.md#modify_federation) | **PATCH** /Federations/{id} | Patch a federation.
*FederationsApi* | [**replace_federation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationsApi.md#replace_federation) | **PUT** /Federations/{id} | Replace a federation.
*FileManagerAuditApi* | [**get_file_manager_audit**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FileManagerAuditApi.md#get_file_manager_audit) | **GET** /FileManagerAudit | Get File Manager audit data.
*FirmDescriptionsApi* | [**get_firm_description**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FirmDescriptionsApi.md#get_firm_description) | **GET** /FirmDescriptions/{id} | Get a firm description.
*FirmDescriptionsApi* | [**get_firm_descriptions**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FirmDescriptionsApi.md#get_firm_descriptions) | **GET** /FirmDescriptions | Get a list of firm descriptions.
*GroupsApi* | [**get_group**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupsApi.md#get_group) | **GET** /Group/{id} | Get a group.
*GroupsApi* | [**get_groups**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupsApi.md#get_groups) | **GET** /Groups | Get a list of groups.
*GroupsApi* | [**modify_group**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupsApi.md#modify_group) | **PATCH** /Group/{id} | Patch a group.
*GroupsApi* | [**replace_group**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupsApi.md#replace_group) | **PUT** /Group/{id} | Replace a group.
*LocationsApi* | [**create_location**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationsApi.md#create_location) | **POST** /Locations | Create a location.
*LocationsApi* | [**get_location**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationsApi.md#get_location) | **GET** /Locations/{id} | Get a location.
*LocationsApi* | [**get_locations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationsApi.md#get_locations) | **GET** /Locations | Get a list of locations.
*LocationsApi* | [**modify_location**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationsApi.md#modify_location) | **PATCH** /Locations/{id} | Patch a location.
*LocationsApi* | [**replace_location**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationsApi.md#replace_location) | **PUT** /Locations/{id} | Replace a location.
*ProductsApi* | [**get_product**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ProductsApi.md#get_product) | **GET** /Products/{id} | Get a product.
*ProductsApi* | [**get_products**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ProductsApi.md#get_products) | **GET** /Products | Get a list of products.
*SchemasApi* | [**get_schema**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/SchemasApi.md#get_schema) | **GET** /Schemas/{id} | Get a schema.
*SchemasApi* | [**get_schemas**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/SchemasApi.md#get_schemas) | **GET** /Schemas | Get a list of schemas.
*ServiceProviderConfigurationApi* | [**get_service_provider_config**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfigurationApi.md#get_service_provider_config) | **GET** /ServiceProviderConfig | Get service provider configuration.
*UserClassesApi* | [**get_user_class**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserClassesApi.md#get_user_class) | **GET** /UserClasses/{id} | Get a user class.
*UserClassesApi* | [**get_user_classes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserClassesApi.md#get_user_classes) | **GET** /UserClasses | Get a list of user classes.
*UserPositionsApi* | [**get_user_position**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserPositionsApi.md#get_user_position) | **GET** /UserPositions/{id} | Get a user position.
*UserPositionsApi* | [**get_user_positions**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserPositionsApi.md#get_user_positions) | **GET** /UserPositions | Get a list of user positions.
*UsersApi* | [**create_user**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UsersApi.md#create_user) | **POST** /Users | Create a user.
*UsersApi* | [**delete_user**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UsersApi.md#delete_user) | **DELETE** /Users/{id} | Delete a user.
*UsersApi* | [**get_user**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UsersApi.md#get_user) | **GET** /Users/{id} | Get a user.
*UsersApi* | [**get_users**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UsersApi.md#get_users) | **GET** /Users | Get a list of users.
*UsersApi* | [**modify_user**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UsersApi.md#modify_user) | **PATCH** /Users/{id} | Patch a user.
*UsersApi* | [**replace_user**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UsersApi.md#replace_user) | **PUT** /Users/{id} | Replace a user.


## Documentation For Models

 - [AuthenticationScheme](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/AuthenticationScheme.md)
 - [Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/Error.md)
 - [ErrorUrnScimSchemasExtensionFactSetCore10Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ErrorUrnScimSchemasExtensionFactSetCore10Error.md)
 - [FederationResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationResource.md)
 - [FederationResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationResourceList.md)
 - [FederationResourceLocation](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationResourceLocation.md)
 - [FederationResourceReference](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationResourceReference.md)
 - [FederationResourceReferenceAssertionValue](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationResourceReferenceAssertionValue.md)
 - [FederationResourceUser](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationResourceUser.md)
 - [FederationResourceUserAssertionValue](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FederationResourceUserAssertionValue.md)
 - [FileManagerAudit](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FileManagerAudit.md)
 - [FileManagerAuditItem](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FileManagerAuditItem.md)
 - [FileManagerAuditItemAdditionalProperty](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FileManagerAuditItemAdditionalProperty.md)
 - [FileManagerAuditItemAdditionalPropertyEntity](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FileManagerAuditItemAdditionalPropertyEntity.md)
 - [FileManagerAuditItemAdditionalPropertyPermissionOverride](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FileManagerAuditItemAdditionalPropertyPermissionOverride.md)
 - [FileManagerAuditItemAdditionalPropertyPermissions](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FileManagerAuditItemAdditionalPropertyPermissions.md)
 - [FirmDescriptionResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FirmDescriptionResource.md)
 - [FirmDescriptionResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FirmDescriptionResourceList.md)
 - [FirmDescriptionResourceMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FirmDescriptionResourceMeta.md)
 - [FirmDescriptionResourceReference](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/FirmDescriptionResourceReference.md)
 - [GroupResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupResource.md)
 - [GroupResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupResourceList.md)
 - [GroupResourceMember](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupResourceMember.md)
 - [GroupResourceMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupResourceMeta.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetCore10Group](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupResourceUrnScimSchemasExtensionFactSetCore10Group.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetVRS10Group](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/GroupResourceUrnScimSchemasExtensionFactSetVRS10Group.md)
 - [InlineResponse429](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/InlineResponse429.md)
 - [LocationResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResource.md)
 - [LocationResourceCompanyAgreementUrl](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResourceCompanyAgreementUrl.md)
 - [LocationResourceFirmDescription](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResourceFirmDescription.md)
 - [LocationResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResourceList.md)
 - [LocationResourceMainLocation](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResourceMainLocation.md)
 - [LocationResourceManagingLocation](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResourceManagingLocation.md)
 - [LocationResourceMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResourceMeta.md)
 - [LocationResourceReference](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/LocationResourceReference.md)
 - [Patch](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/Patch.md)
 - [PatchOperation](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/PatchOperation.md)
 - [PatchOperationValue](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/PatchOperationValue.md)
 - [PendingProductOrder](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/PendingProductOrder.md)
 - [ProductResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ProductResource.md)
 - [ProductResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ProductResourceList.md)
 - [ProductResourceMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ProductResourceMeta.md)
 - [ProductResourceReference](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ProductResourceReference.md)
 - [ProductResourceReferenceWithRapidActivationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ProductResourceReferenceWithRapidActivationInfo.md)
 - [Schema](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/Schema.md)
 - [SchemaAttribute](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/SchemaAttribute.md)
 - [SchemaList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/SchemaList.md)
 - [SchemaMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/SchemaMeta.md)
 - [SchemaSubAttribute](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/SchemaSubAttribute.md)
 - [ServiceProviderConfig](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfig.md)
 - [ServiceProviderConfigBulk](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfigBulk.md)
 - [ServiceProviderConfigChangePassword](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfigChangePassword.md)
 - [ServiceProviderConfigEtag](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfigEtag.md)
 - [ServiceProviderConfigFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfigFilter.md)
 - [ServiceProviderConfigPatch](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfigPatch.md)
 - [ServiceProviderConfigSort](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/ServiceProviderConfigSort.md)
 - [UserClassResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserClassResource.md)
 - [UserClassResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserClassResourceList.md)
 - [UserClassResourceMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserClassResourceMeta.md)
 - [UserClassResourceReference](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserClassResourceReference.md)
 - [UserPositionResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserPositionResource.md)
 - [UserPositionResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserPositionResourceList.md)
 - [UserPositionResourceMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserPositionResourceMeta.md)
 - [UserPositionResourceReference](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserPositionResourceReference.md)
 - [UserResource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResource.md)
 - [UserResourceGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceGroup.md)
 - [UserResourceList](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceList.md)
 - [UserResourceMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceMeta.md)
 - [UserResourceName](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceName.md)
 - [UserResourcePhoneNumber](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourcePhoneNumber.md)
 - [UserResourceUrnScimSchemasExtensionFactSetCore10User](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceUrnScimSchemasExtensionFactSetCore10User.md)
 - [UserResourceUrnScimSchemasExtensionFactSetCore10UserUserTaxonomyData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceUrnScimSchemasExtensionFactSetCore10UserUserTaxonomyData.md)
 - [UserResourceUrnScimSchemasExtensionFactSetVRS10User](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceUrnScimSchemasExtensionFactSetVRS10User.md)
 - [UserResourceVRSDomainData](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceVRSDomainData.md)
 - [UserResourceVRSDomainDataTenancies](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/ProcuretoPayAPISCIM/v2/docs/UserResourceVRSDomainDataTenancies.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.ProcuretoPayAPISCIM.apis and fds.sdk.ProcuretoPayAPISCIM.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.ProcuretoPayAPISCIM.api.default_api import DefaultApi`
- `from fds.sdk.ProcuretoPayAPISCIM.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.ProcuretoPayAPISCIM
from fds.sdk.ProcuretoPayAPISCIM.apis import *
from fds.sdk.ProcuretoPayAPISCIM.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

